Fixed bug #42488 (SoapServer reports an encoding error and the error itself breaks).